# mcp_playground

./: Makefile  README.md  pyproject.toml
1.basic-server-setup/: README.md  client_stdio.py  server.py
